llvm/test/MC/Hexagon/PacketRules/registers_readonly.s
# RUN: not llvm-mc -arch=hexagon -filetype=obj %s 2>&1 | FileCheck %s

# CHECK: 4:3: error: Cannot write to read-only register `PC'
{ pc = r0
  r0 = r0 }
